profilematic (1.7.0) unstable; urgency=low
  * NFC condition
  * Network connection type condition
  * Custom action sets correct environment so QML applications virtual keyboard works
  * Idle mode not activated while speaking on phone
  * Mobile network mode change delayed until no call/data usage

 -- Arto Jalkanen <ajalkane@gmail.com>  Sat, 26 May 2012 21:00:00 +0300

profilematic (1.6.2) unstable; urgency=low
  * Removed background connections action, as it doesn't work
  * Removed power saving from credential warning

 -- Arto Jalkanen <ajalkane@gmail.com>  Sat, 14 May 2012 21:00:00 +0300

profilematic (1.6.1) unstable; urgency=low
  * Cell id location condition fix
  * Close vkb on pressing enter in availability action

 -- Arto Jalkanen <ajalkane@gmail.com>  Sat, 28 Apr 2012 01:28:00 +0300

profilematic (1.6.0) unstable; urgency=low
  * Multi-rule activation
  * Active rules are shown in UI
  * Stand-by screen action (contributed by Ferdinand Mayet)
  * Background connections action
  * Idle condition
  * Custom action for when rule is deactivated
  * Custom action has test button for testing it
  * Location by cell id has timeout option
  * Debug log output is inhibited when running as daemon
  * Warning displayed if flight mode/power saving used but credentials lost

 -- Arto Jalkanen <ajalkane@gmail.com>  Sat, 21 Apr 2012 21:00:00 +0300

profilematic (1.5.0) unstable; urgency=low
  * Mobile network mode action (Dual/2G/3G)
  * Custom action (running shell script)
  * Extended availability modes, away etc. (contributed by Philip Lorenz)
  * Restore previous for BlueTooth
  * BugFix: availability could put GSM offline
  * Warnings of potentially impossible conditions

 -- Arto Jalkanen <ajalkane@gmail.com>  Tue, 14 Mar 2012 23:45:00 +0300

profilematic (1.4.1) unstable; urgency=low
  * Fixes to installation/startup/rule savings

 -- Arto Jalkanen <ajalkane@gmail.com>  Tue, 09 Mar 2012 23:45:00 +0300

profilematic (1.4.0) unstable; urgency=low