@@ -138,6 +138,12 @@ PlatformUtil::backgroundConnectionsMode() const {
     return -1;
 }
 
+int
+PlatformUtil::batteryChargingState() const {
+    qDebug("PlatformUtil::batteryChargingState default, returning -1");
+    return -1;
+}
+
 void
 PlatformUtil::publishNotification(const QString &message) {
     qDebug("PlatformUtil::publishNotification default, doing nothing for value %s", qPrintable(message));
